# bank_it

./: README.md  pyproject.toml
batches/: batch_001.txt
db/: models.py  schemas.py
formats/: README.md  account_layout.py  record_registry.py
jobs/: import_accounts.py
tests/formats/: test_account.py
